--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.2.7
 Django==3.0.5
+django-ckeditor==5.9.0
+django-js-asset==1.2.2
 Pillow==7.1.1
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
